Fixing overflow nesting and removing max-height from media-box__picture

--- a/src/scss/components/_media_box.scss
+++ b/src/scss/components/_media_box.scss
@@ -65,7 +65,6 @@
 
   &__picture {
     margin-right: 10px;
-    max-height: 38px;
     min-width: 38px;
   }
 
